resizing input and added + icon

--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="javascript:confirmLogout()">Logout</a>
+          <a class="nav-link" href="javascript:confirmLogout()"><span><i class="fas fa-sign-out-alt"></i></span> Logout</a>
         </li>
       </ul>
       <span style="color:white;" class="d-none d-lg-inline">Welcome, @identity.GetClaim(ClaimTypes.GivenName) @identity.GetClaim(ClaimTypes.Surname)!</span>
