--- a/PAM/Views/EditPortfolioRequest/RequesterInfo.cshtml
+++ b/PAM/Views/EditPortfolioRequest/RequesterInfo.cshtml
@@ -29,27 +29,21 @@
 <form asp-action="RequesterInfo" method="post">
   <input asp-for="RequesterId" type="hidden">
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-4">
       <label asp-for="FirstName">First Name</label>
       <input asp-for="FirstName" type="text" class="form-control" required>
     </div>
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-4">
       <label asp-for="LastName">Last Name</label>
       <input asp-for="LastName" type="text" class="form-control" required>
     </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label asp-for="Department">Department</label>
-      <input asp-for="Department" type="text" class="form-control">
-    </div>
-    <div class="form-group col-md-6">
-      <label asp-for="Service">Service</label>
-      <input asp-for="Service" type="text" class="form-control">
+    <div class="form-group col-md-2">
+      <label asp-for="MiddleName">Middle Name</label>
+      <input asp-for="MiddleName" type="text" class="form-control">
     </div>
   </div>
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-4">
       <label asp-for="Title">Title</label>
       <input asp-for="Title" type="text" class="form-control">
     </div>
@@ -60,30 +54,38 @@
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label asp-for="Address">Address</label>
-      <input asp-for="Address" type="text" class="form-control">
+      <label asp-for="Department">Department</label>
+      <input asp-for="Department" type="text" class="form-control">
     </div>
-    <div class="form-group col-md-6">
-      <label asp-for="City">City</label>
-      <input asp-for="City" type="text" class="form-control">
+    <div class="form-group col-md-5">
+      <label asp-for="Service">Service</label>
+      <input asp-for="Service" type="text" class="form-control">
     </div>
   </div>
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-5">
+      <label asp-for="Address">Address</label>
+      <input asp-for="Address" type="text" class="form-control">
+    </div>
+    <div class="form-group col-md-4">
+      <label asp-for="City">City</label>
+      <input asp-for="City" type="text" class="form-control">
+    </div>
+    <div class="form-group col-md-1">
       <label asp-for="State">State</label>
       <input asp-for="State" type="text" class="form-control">
     </div>
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-2">
       <label asp-for="Zip">Zip Code</label>
       <input asp-for="Zip" type="text" class="form-control">
     </div>
   </div>
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-2">
       <label asp-for="Phone">Phone</label>
       <input asp-for="Phone" type="text" class="form-control">
     </div>
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-2">
       <label asp-for="CellPhone">Cell Phone</label>
       <input asp-for="CellPhone" type="text" class="form-control">
     </div>
