--- a/PAM/Views/EditPortfolioRequest/Summary.cshtml
+++ b/PAM/Views/EditPortfolioRequest/Summary.cshtml
@@ -65,27 +65,21 @@
   </div>
   <div class="card-body">
     <div class="row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label>First Name</label>
         <span class="form-control">@Model.RequestedFor.FirstName</span>
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label>Last Name</label>
         <span class="form-control">@Model.RequestedFor.LastName</span>
       </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Department</label>
-        <span class="form-control">@Model.RequestedFor.Department</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Service</label>
-        <span class="form-control">@Model.RequestedFor.Service</span>
+      <div class="form-group col-md-2">
+        <label>Middle Name</label>
+        <span class="form-control">@Model.RequestedFor.MiddleName</span>
       </div>
     </div>
     <div class="row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label>Title</label>
         <span class="form-control">@Model.RequestedFor.Title</span>
       </div>
@@ -96,30 +90,38 @@
     </div>
     <div class="row">
       <div class="form-group col-md-6">
-        <label>Address</label>
-        <span class="form-control">@Model.RequestedFor.Address</span>
+        <label>Department</label>
+        <span class="form-control">@Model.RequestedFor.Department</span>
       </div>
-      <div class="form-group col-md-6">
-        <label>City</label>
-        <span class="form-control">@Model.RequestedFor.City</span>
+      <div class="form-group col-md-5">
+        <label>Service</label>
+        <span class="form-control">@Model.RequestedFor.Service</span>
       </div>
     </div>
     <div class="row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-5">
+        <label>Address</label>
+        <span class="form-control">@Model.RequestedFor.Address</span>
+      </div>
+      <div class="form-group col-md-4">
+        <label>City</label>
+        <span class="form-control">@Model.RequestedFor.City</span>
+      </div>
+      <div class="form-group col-md-1">
         <label>State</label>
         <span class="form-control">@Model.RequestedFor.State</span>
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-2">
         <label>Zip Code</label>
         <span class="form-control">@Model.RequestedFor.Zip</span>
       </div>
     </div>
     <div class="row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-2">
         <label>Phone</label>
         <span class="form-control">@Model.RequestedFor.Phone</span>
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-2">
         <label>Cell Phone</label>
         <span class="form-control">@Model.RequestedFor.CellPhone</span>
       </div>
