--- a/PAM/Views/Request/MyRequests.cshtml
+++ b/PAM/Views/Request/MyRequests.cshtml
@@ -12,7 +12,7 @@
   </ol>
 </nav>
 
-<div><a asp-action="CreateRequest" class="btn btn-primary float-right">New Request</a></div>
+<div><a asp-action="CreateRequest" class="btn btn-primary float-right"><span><i class="fas fa-plus"></i></span> New Request</a></div>
 
 @if (!allRequests.Any())
 {
