--- a/PAM/Views/Review/EditReview.cshtml
+++ b/PAM/Views/Review/EditReview.cshtml
@@ -41,27 +41,21 @@
   <div class="card-header bg-info text-white">Requester Information</div>
   <div class="card-body">
     <div class="row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label>First Name</label>
         <span class="form-control">@request.RequestedFor.FirstName</span>
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label>Last Name</label>
         <span class="form-control">@request.RequestedFor.LastName</span>
       </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Department</label>
-        <span class="form-control">@request.RequestedFor.Department</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Service</label>
-        <span class="form-control">@request.RequestedFor.Service</span>
+      <div class="form-group col-md-2">
+        <label>Middle Name</label>
+        <span class="form-control">@request.RequestedFor.MiddleName</span>
       </div>
     </div>
     <div class="row">
-      <div class="form-group col-md-6">
+       <div class="form-group col-md-4">
         <label>Title</label>
         <span class="form-control">@request.RequestedFor.Title</span>
       </div>
@@ -72,30 +66,38 @@
     </div>
     <div class="row">
       <div class="form-group col-md-6">
-        <label>Address</label>
-        <span class="form-control">@request.RequestedFor.Address</span>
+        <label>Department</label>
+        <span class="form-control">@request.RequestedFor.Department</span>
       </div>
-      <div class="form-group col-md-6">
-        <label>City</label>
-        <span class="form-control">@request.RequestedFor.City</span>
+      <div class="form-group col-md-5">
+        <label>Service</label>
+        <span class="form-control">@request.RequestedFor.Service</span>
       </div>
     </div>
     <div class="row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-5">
+        <label>Address</label>
+        <span class="form-control">@request.RequestedFor.Address</span>
+      </div>
+      <div class="form-group col-md-4">
+        <label>City</label>
+        <span class="form-control">@request.RequestedFor.City</span>
+      </div>
+      <div class="form-group col-md-1">
         <label>State</label>
         <span class="form-control">@request.RequestedFor.State</span>
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-2">
         <label>Zip Code</label>
         <span class="form-control">@request.RequestedFor.Zip</span>
       </div>
     </div>
     <div class="row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-2">
         <label>Phone</label>
         <span class="form-control">@request.RequestedFor.Phone</span>
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-2">
         <label>Cell Phone</label>
         <span class="form-control">@request.RequestedFor.CellPhone</span>
       </div>
