--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -1,20 +1,4 @@
-﻿.main-content {
-  margin: 1em;
-}
-
-footer {
-  text-align: center;
-}
-
-.glyphicon-minus:before {
-  content: "\2212";
-}
-
-.glyphicon-plus:before {
-  content: "\002b";
-}
-
-/*
+﻿/*
 body {
   background-repeat: no-repeat;
   background-position: center;
@@ -41,6 +25,14 @@ background-color: yellow;
 /*----------------------------------------------------------
     [ Main Content Styling ]
 */
+
+.main-content {
+  margin: 1em;
+}
+
+footer {
+  text-align: center;
+}
 
 /*
 .content-container {
