--- a/PAM/Views/Review/EditReview.cshtml
+++ b/PAM/Views/Review/EditReview.cshtml
@@ -75,19 +75,19 @@
       </div>
     </div>
     <div class="row">
-      <div class="form-group col-md-5">
+      <div class="form-group col-sm-5">
         <label>Address</label>
         <span class="form-control">@request.RequestedFor.Address</span>
       </div>
-      <div class="form-group col-md-4">
+      <div class="form-group col-sm-4">
         <label>City</label>
         <span class="form-control">@request.RequestedFor.City</span>
       </div>
-      <div class="form-group col-md-1">
+      <div class="form-group col-xl-1">
         <label>State</label>
         <span class="form-control">@request.RequestedFor.State</span>
       </div>
-      <div class="form-group col-md-2">
+      <div class="form-group col-xl-2">
         <label>Zip Code</label>
         <span class="form-control">@request.RequestedFor.Zip</span>
       </div>
