--- a/PAM/Views/Location/AddLocation.cshtml
+++ b/PAM/Views/Location/AddLocation.cshtml
@@ -1,31 +1,18 @@
 ﻿@model Location
 @{
-  ViewData["Title"] = "Edit Location";
+  ViewData["Title"] = "Add Location";
 }
-@section Scripts{
-  <script>
-    function confirmRemoval() {
-      var msg = "Are you sure you want to remove this location?";
-      if (confirm(msg))
-        window.location.href = "/Location/RemoveLocation/@Model.LocationId";
-    }
-  </script>
-}
+
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a asp-action="Locations">Locations</a></li>
-    <li class="breadcrumb-item"><a asp-action="ViewLocation" asp-route-id="@Model.LocationId">@Model.Name</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Edit</li>
+    <li class="breadcrumb-item active" aria-current="page">Add Location</li>
   </ol>
 </nav>
 
 <form method="post">
   <div class="form-row">
-    <div class="form-group col-md-6">
-      <label asp-for="LocationId">Id</label>
-      <input asp-for="LocationId" type="text" readonly class="form-control">
-    </div>
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-12">
       <label asp-for="Name">Name</label>
       <input asp-for="Name" type="text" class="form-control" required>
     </div>
@@ -51,11 +38,8 @@
     </div>
   </div>
   <div class="form-row">
-    <div class="col-6">
-      <a href="javascript:confirmRemoval()" class="btn btn-danger">Remove Location</a>
-    </div>
-    <div class="col-6 text-right">
-      <button type="submit" class="btn btn-primary">Save</button>
+    <div class="col-12 text-right">
+      <button type="submit" class="btn btn-primary">Add</button>
     </div>
   </div>
 </form>
