--- a/PAM/Views/Location/Locations.cshtml
+++ b/PAM/Views/Location/Locations.cshtml
@@ -1,78 +1,51 @@
-﻿@model IEnumerable<PAM.Models.Location>
-
+﻿@model ICollection<Location>
 @{
-  ViewData["Title"] = "Index";
+  ViewData["Title"] = "Locations";
 }
-<!doctype html>
-<html lang="en">
-<head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.css">
+@section StyleSheets{
+  <link rel="stylesheet" href="~/lib/bootstrap-table/bootstrap-table.min.css">
+}
+@section Scripts{
+  <script src="~/lib/core-js/core.min.js"></script>
+  <script src="~/lib/bootstrap-table/bootstrap-table.min.js"></script>
+}
 
-</head>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item active" aria-current="page">Locations</li>
+  </ol>
+</nav>
 
-<body >
-  <h2>Location</h2>
-  <p>
-    <a asp-action="CreateLocation">Create New</a>
-  </p>
-  <table class="table table-hover" data-toggle="table" data-pagination="true" data-search="true">
-    <thead class="thead-dark">
+<p><a asp-action="AddLocation" class="btn btn-primary float-right">Add Location</a></p>
+
+<table data-toggle="table" data-pagination="true" data-page-size="25" data-search="true" data-search-align="left">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th class="d-none d-lg-table-cell">Address</th>
+      <th class="d-none d-md-table-cell" data-sortable="true">City</th>
+      <th class="d-none d-md-table-cell">State</th>
+      <th class="d-none d-md-table-cell" data-sortable="true">Zip</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    @foreach (var location in Model)
+    {
       <tr>
-        <th data-sortable="true">
-          @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-          @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th data-sortable="true">
-          @Html.DisplayNameFor(model => model.City)
-        </th>
-        <th data-sortable="true">
-          @Html.DisplayNameFor(model => model.State)
-        </th>
-        <th>
-          @Html.DisplayNameFor(model => model.Zip)
-        </th>
-        <th>Options</th>
+        <td>
+          <a asp-action="ViewLocation" asp-route-id="@location.LocationId">@location.Name</a>
+        </td>
+        <td class="d-none d-lg-table-cell">@location.Address</td>
+        <td class="d-none d-md-table-cell">@location.City</td>
+        <td class="d-none d-md-table-cell">@location.State</td>
+        <td class="d-none d-md-table-cell">@location.Zip</td>
+        <td>
+          <a asp-action="EditLocation" asp-route-id="@location.LocationId" class="btn btn-primary">
+            <i class="fas fa-edit"></i>
+            <span class="d-none d-sm-inline">Edit</span></a>
+        </td>
       </tr>
-    </thead>
-    <tbody>
-      @foreach (var item in Model)
-      {
-        <tr>
-          <td>
-            @Html.DisplayFor(modelItem => item.Name)
-          </td>
-          <td>
-            @Html.DisplayFor(modelItem => item.Address)
-          </td>
-          <td>
-            @Html.DisplayFor(modelItem => item.City)
-          </td>
-          <td>
-            @Html.DisplayFor(modelItem => item.State)
-          </td>
-          <td>
-            @Html.DisplayFor(modelItem => item.Zip)
-          </td>
-          <td>
-            <a asp-action="EditLocation" asp-route-id="@item.LocationId"><i class="fas fa-edit"></i></a> |
-            <a asp-action="DetailsLocation" asp-route-id="@item.LocationId"><i class="fas fa-info-circle"></i></a> |
-            <a asp-action="DeleteLocation" asp-route-id="@item.LocationId"><i class="fas fa-trash"></i></a>
-          </td>
-        </tr>
-      }
-    </tbody>
-  </table>
-  <!-- jQuery first, then Popper.js, then Bootstrap JS, and then Bootstrap Table JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.6.2/core.min.js"></script>
-  <script src="https://unpkg.com/bootstrap-table@1.13.4/dist/bootstrap-table.min.js"></script>
-</body>
-
-
-</html>
+    }
+  </tbody>
+</table>
