--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -53,12 +53,12 @@
   </nav>
   <!-- Main Content -->
   <div class="container">
-    <div class="main-content">
+    <div class="main-content m-3">
       @RenderBody()
     </div>
   </div>
   <!-- Footer -->
-  <footer class="bg-dark text-white p-3 text-center">&copy; Copyright 2018-2019. Los Angeles County.</footer>
+  <footer class="p-3 text-center">&copy; Copyright 2018-2019. Los Angeles County.</footer>
   <!-- Scripts -->
   <script src="~/lib/jquery/jquery.min.js"></script>
   <script src="~/lib/popper.js/umd/popper.min.js"></script>
