Reworking unit management (more to come)
. Removing a bureau removes its descendants too.
. Make everything selectable in tree view as it's needed for unit management.

--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
           <div class="dropdown-menu" aria-labeledby="navDropDownMenu">
             <a class="dropdown-item" asp-controller="Location" asp-action="Locations">Locations</a>
             <a class="dropdown-item" asp-controller="Bureau" asp-action="Bureaus">Bureaus</a>
-            <a class="dropdown-item" asp-controller="Unit" asp-action="SelectUnit">Units</a>
+            <a class="dropdown-item" asp-controller="Unit" asp-action="Units">Units</a>
             <a class="dropdown-item" asp-controller="System" asp-action="Systems">Systems</a>
           </div>
         </li>
