--- a/PAM/Views/Unit/Units.cshtml
+++ b/PAM/Views/Unit/Units.cshtml
@@ -1,86 +1,59 @@
-﻿@model IEnumerable<PAM.Models.Unit>
-
-@{
-    ViewData["Title"] = "Units";
+﻿@{
+  ViewData["Title"] = "Units";
 }
-<head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.css">
-</head>
-<h2> Units</h2>
-
-
-<p>
-    <a asp-action="CreateUnit">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Bureau)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Parent)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DisplayOrder)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UnitId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Bureau.Code)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Parent.Name)
-                </td>
-
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.DisplayOrder)
-                </td>
-                <td>
-                    <div>
-
-                        @if (item.Children.Count != 0)
-                        {
-                            <a asp-action="DefaultPortfolio" asp-route-id="@item.UnitId">More</a>
-                           
-                        }
-                        else
-                        {
-                            <a asp-action="DefaultPortfolio" asp-route-id="@item.UnitId">Empty</a>
-                        }
-                    </div>
-
-                </td>
-                <td>
-                    <a asp-action="EditUnit" asp-route-id="@item.UnitId">Edit</a> |
-                    <a asp-action="DetailsUnit" asp-route-id="@item.UnitId">Details</a> |
-                    <a asp-action="DeleteUnit" asp-route-id="@item.UnitId">Delete</a>
-                </td>
-            </tr>
-
+@section Scripts {
+  <script src="~/lib/bootstrap-treeview/bootstrap-treeview.min.js"></script>
+  <script>
+  $(function(){
+    $('#tree').treeview({
+      data: @Html.Raw(@ViewData["tree"]),
+      levels: 1,
+      expandIcon: "fa fa-caret-down",
+      collapseIcon: "fa fa-caret-up",
+      onNodeSelected: function (event, node) {
+        if (node.type == 'Bureau') {
+          $("#systems").empty();
+          return;
         }
-    </tbody>
-</table>
+        $("#unitId").val(node.id);
+        $.ajax({
+          url: "/api/portfolio/" + node.id,
+          success: function (data) {
+            $("#systems").empty();
+            data.forEach(function (system) {
+              $("#systems").append("<tr><td>" + system.systemId + "</td><td>"
+                + system.name + "</td><td>"
+                + (system.description ? system.description : '') + "</td></tr>");
+            });
+          }
+        })
+      }
+    });
+  });
+  </script>
+}
 
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item active" aria-current="page">Units</li>
+  </ol>
+</nav>
+
+<div class="row">
+  <div class="col-12 col-md-6 mb-3">
+    <div id="tree"></div>
+  </div>
+  <div class="col-12 col-md-6 mb-3">
+    <p>System Portfolio</p>
+    <table class="table sticky-top">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Description</th>
+        </tr>
+      </thead>
+      <tbody id="systems"></tbody>
+    </table>
+  </div>
+</div>
