--- a/PAM/Views/EditPortfolioRequest/AdditionalInfo.cshtml
+++ b/PAM/Views/EditPortfolioRequest/AdditionalInfo.cshtml
@@ -11,6 +11,11 @@
   $(function(){
     var page ='@ViewData["Title"]';
     $("li[data-title='" + page + "']").addClass("active");
+    $("#saveDraft").click(function () {
+      var form = $(this).parents("form:first");
+      form.append("<input type='hidden' name='saveDraft' value='true'>");
+      form.submit();
+    });
   });
   </script>
 }
@@ -31,14 +36,6 @@
       <input class="form-check-input" type="checkbox" asp-for="IsContractor">
       <label class="form-check-label" asp-for="IsContractor">Contractor</label>
     </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" asp-for="IsHighProfileAccess">
-      <label class="form-check-label" asp-for="IsHighProfileAccess">High Profile</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" asp-for="IsGlobalAccess">
-      <label class="form-check-label" asp-for="IsGlobalAccess">Global Access</label>
-    </div>
   </div>
   <div class="form-row">
     <div class="form-group col-12 col-md-4">
@@ -56,7 +53,7 @@
   </div>
   <div class="form-row">
     <div class="col-4">
-      <a asp-controller="Request" asp-action="MyRequests" class="btn btn-secondary">Save Draft</a>
+      <button id="saveDraft" class="btn btn-secondary">Save Draft</button>
     </div>
     <div class="col-8 text-right">
       <a asp-action="UnitSelection" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
