--- a/PAM/Views/EditPortfolioRequest/RequesterInfo.cshtml
+++ b/PAM/Views/EditPortfolioRequest/RequesterInfo.cshtml
@@ -12,6 +12,11 @@
   $(function(){
     var page ='@ViewData["Title"]';
     $("li[data-title='" + page + "']").addClass("active");
+    $("#saveDraft").click(function () {
+      var form = $(this).parents("form:first");
+      form.append("<input type='hidden' name='saveDraft' value='true'>");
+      form.submit();
+    });
   });
   </script>
 }
@@ -90,7 +95,7 @@
   </div>
   <div class="form-row">
     <div class="col-4">
-      <a asp-controller="Request" asp-action="MyRequests" class="btn btn-secondary">Save Draft</a>
+      <button id="saveDraft" class="btn btn-secondary">Save Draft</button>
     </div>
     <div class="col-8 text-right">
       <button id="next" type="submit" class="btn btn-primary">Next</button>
