--- a/PAM/Emails/ReviewRequest.Subject.cshtml
+++ b/PAM/Emails/ReviewRequest.Subject.cshtml
@@ -1,1 +1,1 @@
-﻿System Registration Request ID# @Model.Request.SubmittedOn.Year-@Model.Request.RequestId is Waiting for Your Review
+﻿PAM - System Registration Request ID# @Model.Request.DisplayId is Waiting for Your Review
