--- a/PAM/Views/Request/MyRequests.cshtml
+++ b/PAM/Views/Request/MyRequests.cshtml
@@ -54,7 +54,7 @@
           <thead>
             <tr>
               <th scope="col">Type</th>
-              <th scope="col" class="d-none d-sm-table-cell">CreatedOn</th>
+              <th scope="col" class="d-none d-sm-table-cell">Created</th>
               <th scope="col"></th>
             </tr>
           </thead>
@@ -62,10 +62,10 @@
             @foreach (var request in draftRequests)
             {
               <tr>
-                <td>
+                <td class="align-middle">
                   <a asp-action="EditRequest" asp-route-id="@request.RequestId">@request.RequestType.DisplayCode</a>
                 </td>
-                <td class="d-none d-sm-table-cell">@request.CreatedOn.ToString("MM/dd/yyyy")</td>
+                <td class="align-middle d-none d-sm-table-cell">@request.CreatedOn.ToString("MM/dd/yyyy")</td>
                 <td class="text-right">
                   <a asp-action="EditRequest" asp-route-id="@request.RequestId" class="btn btn-primary">
                     <i class="fas fa-edit"></i>
@@ -91,8 +91,8 @@
             <tr>
               <th scope="col">Id</th>
               <th scope="col">Type</th>
-              <th scope="col">SubmittedOn</th>
-              <th scope="col">UpdatedOn</th>
+              <th scope="col" class="d-none d-md-table-cell">Submitted</th>
+              <th scope="col" class="d-none d-md-table-cell">Updated</th>
             </tr>
           </thead>
           <tbody>
@@ -103,8 +103,8 @@
                 <td>
                   <a asp-action="ViewRequest">@request.RequestType.DisplayCode</a>
                 </td>
-                <td>@request.SubmittedOn?.ToString("MM/dd/yyyy")</td>
-                <td>@request.UpdatedOn?.ToString("MM/dd/yyyy")</td>
+                <td class="d-none d-md-table-cell">@request.SubmittedOn?.ToString("MM/dd/yyyy")</td>
+                <td class="d-none d-md-table-cell">@request.UpdatedOn?.ToString("MM/dd/yyyy")</td>
               </tr>
             }
           </tbody>
@@ -121,8 +121,8 @@
               <th scope="col">Id</th>
               <th scope="col">Type</th>
               <th scope="col">Status</th>
-              <th scope="col">SubmittedOn</th>
-              <th scope="col">CompletedOn</th>
+              <th scope="col" class="d-none d-md-table-cell">Submitted</th>
+              <th scope="col" class="d-none d-md-table-cell">Completed</th>
             </tr>
           </thead>
           <tbody>
@@ -134,8 +134,8 @@
                   <a asp-action="ViewRequest">@request.RequestType.DisplayCode</a>
                 </td>
                 <td>@request.RequestStatus</td>
-                <td>@request.SubmittedOn?.ToString("MM/dd/yyyy")</td>
-                <td>@request.CompletedOn?.ToString("MM/dd/yyyy")</td>
+                <td class="d-none d-md-table-cell">@request.SubmittedOn?.ToString("MM/dd/yyyy")</td>
+                <td class="d-none d-md-table-cell">@request.CompletedOn?.ToString("MM/dd/yyyy")</td>
               </tr>
             }
           </tbody>
