--- a/PAM/Views/Unit/AddUnit.cshtml
+++ b/PAM/Views/Unit/AddUnit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Unit
 @{
-  ViewData["Title"] = "Edit Unit";
+  ViewData["Title"] = "Add Unit";
   var bureau = (Bureau)ViewData["bureau"];
   var parent = (Unit)ViewData["parent"];
 }
@@ -33,23 +33,14 @@
           $("#addSystem").val("");
         }
       });
-      $(".remove-system").click(function () {
-        $(this).closest("tr").remove();
-      });
     });
-    function confirmRemoval() {
-      var msg = "Are you sure you want to remove this unit?";
-      if (confirm(msg))
-        window.location.href = "/Unit/RemoveUnit/@Model.UnitId";
-    }
   </script>
 }
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a asp-action="Units">Units</a></li>
-    <li class="breadcrumb-item"><a asp-action="Units" asp-route-id="@Model.UnitId">@Model.Name</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Edit Unit</li>
+    <li class="breadcrumb-item active" aria-current="page">Add Unit</li>
   </ol>
 </nav>
 
@@ -89,28 +80,15 @@
   <div class="form-row">
     <table class="table table-hover">
       <thead><tr><th>Id</th><th>Name</th><th class="d-none d-md-table-cell">Description</th><th></th></tr></thead>
-      <tbody id="systems">
-        @foreach(var unitSystem in Model.Systems)
-        {
-          <tr>
-            <td>@unitSystem.SystemId</td>
-            <td>@unitSystem.System.Name</td>
-            <td>@unitSystem.System.Description</td>
-            <td>
-              <button class="btn btn-danger remove-system"><i class="fas fa-trash-alt"></i></button>
-              <input type="hidden" name="systemIds" value="@unitSystem.SystemId">
-            </td>
-          </tr>
-        }
-      </tbody>
+      <tbody id="systems"></tbody>
     </table>
   </div>
   <div class="form-row">
     <div class="col-6">
-      <a href="javascript:confirmRemoval()" class="btn btn-danger">Remove Unit</a>
+      <a asp-action="Units" asp-route-id="@parent?.UnitId" class="btn btn-secondary">Cancel</a>
     </div>
     <div class="col-6 text-right">
-      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-primary">Add</button>
     </div>
   </div>
   <input type="hidden" asp-for="BureauId" value="@bureau.BureauId">
