--- a/PAM/Views/EditAddAccess/AddSystems.cshtml
+++ b/PAM/Views/EditAddAccess/AddSystems.cshtml
@@ -11,7 +11,6 @@
 
 @section Scripts {
   <script src="~/lib/bootstrap-treeview/bootstrap-treeview.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
   <script src="~/lib/core-js/core.min.js"></script>
   <script src="~/lib/bootstrap-table/bootstrap-table.min.js"></script>
   <script>
@@ -72,11 +71,14 @@
         <p class="float-left mt-2">Please select the system(s) to add:</p>
         <table id="table"
                data-toggle="table"
+               data-pagination="true"
+               data-page-size="15"
+               data-maintain-selected="true"
                data-search="true"
                data-search-align="right">
           <thead>
             <tr>
-              <th data-field="state"></th>
+              <th ></th>
               <th class="d-md-table-cell" data-sortable="true" scope="col">Id</th>
               <th class="d-md-table-cell" data-sortable="true" scope="col">Name</th>
               <th class="d-md-table-cell" scope="col">Description</th>
@@ -87,7 +89,7 @@
             {
               var label = "system" + system.SystemId;
               <tr>
-                <td class="d-none d-md-table-cell">
+                <td  class="d-none d-md-table-cell">
                   <div class="custom-control custom-checkbox" id="selectSystems">
                     <input type="checkbox" class="custom-control-input" name="addingSystem" id="@label" value="@system.SystemId" />
                     <label class="custom-control-label" for="@label"></label>
