Made all request types selectable

--- a/PAM/Views/Request/CreateRequest.cshtml
+++ b/PAM/Views/Request/CreateRequest.cshtml
@@ -31,7 +31,7 @@
       }
     });
     $("input.type-selection:first").prop("checked", true);
-    $("input.type-selection:not(:first)").prop("disabled", true);
+    //$("input.type-selection:not(:first)").prop("disabled", true);
   });
   </script>
 }
